--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,31 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+}
+
+#main {
+  padding-top: 20px;
+}
+
+.card {
+  max-width: 150px;
+  min-height: 200px;
+  margin: auto;
+  font-size: 2em;
+  border-radius: 10%;
+  padding: 0px 10px 0px 10px;
+  background-color: white;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px 8px 8px 2px;
+}
+
+.value {
+  font-size: 3em;
+  text-align: center;
+}
+
+.bottom {
+  transform: rotate(180deg);
+}
